# aleo_lambda_blockchain

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: build-push-binary.yml  ci.yml
aleo/: credits.aleo  hello.aleo  records.aleo  token.aleo
cli/: Cargo.toml  README.md
cli/src/: main.rs
hello/: README.md  program.json
pow/: README.md
prover/: Cargo.toml
prover/src/: main.rs
src/: account.rs  client.rs  commands.rs  genesis.rs  lib.rs
src/blockchain/: application.rs  genesis.rs  main.rs  program_store.rs  record_store.rs  validator_set.rs
src/client/: account.rs  commands.rs  main.rs  tendermint.rs
src/lib/: mod.rs  program_file.rs  query.rs  transaction.rs  validator.rs  vm.rs
src/lib/vm/: mod.rs  stack.rs
src/lib/vm/lambdavm/: mod.rs
src/lib/vm/snarkvm/: mod.rs
src/lib/vm/vmtropy/: mod.rs
src/snarkvm_abci/: application.rs  main.rs  program_store.rs  record_store.rs  validator_set.rs
tendermint/: README.md
tendermint/abci-app/: .gitignore  Cargo.toml  README.md
tendermint/abci-app/src/: application.rs  main.rs
tendermint/snark-vm-adaptor/: Cargo.toml
tendermint/snark-vm-adaptor/src/: application.rs  main.rs
tests/: client.rs
verifier/: Cargo.toml
verifier/src/: main.rs
