[package]
name = "aleo_client"
version = "0.1.0"
edition = "2021"
default-run = "client"

[[bin]]
name = "client"
path = "src/client.rs"
test = false

[[bin]]
name = "snarkvm_abci"
path = "src/snarkvm_abci/main.rs"

[dependencies]
anyhow = "1.0.66"
bincode = "1.3.3"
bytes = { version = "1.0", default-features = false }
clap = { version = "4.0.5", features = ["derive"] }
flex-error = { version = "0.4.4", default-features = false }
log = "0.4.14"
prost = { version = "0.11", default-features = false }
rand = "0.8.5"
serde = "1.0"
serde_json = { version = "1.0", features = ["raw_value"] }
simple_logger = "2.3.0"
tendermint = "0.25.0"
tendermint-abci = "0.25.0"
tendermint-proto = { version = "0.25.0", default-features = false }
tendermint-rpc = { version = "0.25.0", features = ["http-client"] }
tokio = { version = "1.15.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.2.1", features = ["v4"] }

[dependencies.snarkvm]
git = "https://github.com/Entropy1729/snarkVM.git"
branch = "testnet3"
features = ["aleo-cli", "circuit", "console", "parallel", "rest"]