[package]
name = "aleo_client"
version = "0.1.0"
edition = "2021"
default-run = "client"

[profile.test]
# use optimizations even in testing, otherwise snarkvm makes it too slow
opt-level = 3
debug-assertions = true

[lib]
path = "src/lib/mod.rs"
doctest = false
name = "lib"

[[bin]]
path = "src/client/main.rs"
doctest = false
name =  "client"

[[bin]]
name = "genesis"
path = "src/blockchain/genesis.rs"
test = false

[[bin]]
name = "snarkvm_abci"
path = "src/blockchain/main.rs"

[dependencies]
anyhow = "1.0.66"
bincode = "1.3.3"
bytes = { version = "1.0", default-features = false }
clap = { version = "4.0.5", features = ["derive", "env"] }
flex-error = { version = "0.4.4", default-features = false }
log = "0.4.14"
prost = { version = "0.11", default-features = false }
rand = "0.8.5"
serde = "1.0"
serde_json = { version = "1.0", features = ["raw_value"] }
simple_logger = "2.3.0"
tendermint = "0.25.0"
tendermint-abci = "0.25.0"
tendermint-proto = { version = "0.25.0", default-features = false }
tendermint-rpc = { version = "0.25.0", features = ["http-client"] }
tokio = { version = "1.15.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt", "std"]}
uuid = { version = "1.2.1", features = ["v4"] }
parking_lot = { version = "0.12.1" }
dirs = "4.0.0"
rocksdb = "0.19.0"
hex = "0.4.3"
rand_chacha = "0.3.1"
indexmap = "1.9.2"
itertools = "0.10.5"
sha2 = "0.10.6"
base64 = "0.20.0"
sha3 = "0.10.6"
cfg-if = "1"

[dependencies.lambdavm]
git = "ssh://git@github.com/lambdaclass/aleo_lambda_vm.git"
branch = "main"
optional = true

[dependencies.snarkvm]
git = "https://github.com/lambdaclass/snarkVM.git"
branch = "entropy_fork"
features = ["circuit", "console", "parallel", "parameters"]
optional = true

[profile.bench]
debug = true


[dev-dependencies]
assert_fs = "1.0.9"
snarkvm = { git = "https://github.com/Lambdaclass/snarkVM.git", branch = "entropy_fork" } # used for creating records in tests
assert_cmd = "2.0.6"
retry = "2.0.0"
serial_test = "1.0.0"
ctor = "0.1.23"

[features]
#default = ["lambdavm_backend"]
#default = ["snarkvm_backend"]
snarkvm_backend = ["snarkvm"]
lambdavm_backend =  ["lambdavm"]
