[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.snarkvm]
git = "https://github.com/Entropy1729/snarkVM.git"
branch = "testnet3"
features = ["aleo-cli", "circuit", "console", "parallel", "rest"]
