[package]
name = "prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.18", features = ["derive"] }
rand = "0.8.5"
tokio = { version = "1.15.0", features = ["full"] }
bincode = "1.3.3"

[dependencies.snarkvm]
git = "https://github.com/Entropy1729/snarkVM.git"
branch = "testnet3"
features = ["aleo-cli", "circuit", "console", "parallel", "rest"]

[dependencies.consensus-workbench]
git = "https://github.com/Entropy1729/consensus-workbench.git"
branch = "main"

[dependencies.bytes]
version = "1.2.1"
