[package]
name = "prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.18", features = ["derive"] }
rand = "0.8.5"
tokio = { version = "1.15.0", features = ["full"] }
bincode = "1.3.3"
serde = "1.0.147"
uuid = { version = "1.2.1", features = ["v4"] }
log = "0.4.14"
simple_logger = "2.3.0"
tendermint-rpc = { version = "0.25.0", features = ["http-client"] }
tendermint = { version = "0.25.0" }

[dependencies.snarkvm]
git = "https://github.com/Entropy1729/snarkVM.git"
branch = "testnet3"
features = ["aleo-cli", "circuit", "console", "parallel", "rest"]
