[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
rand = "0.8.5"
tokio = { version = "1.15.0", features = ["full"] }
async-trait = "0.1.50"
futures = "0.3.14"
bincode = "1.3.3"
log = "0.4.14"
simple_logger = "2.3.0"

[dependencies.snarkvm]
git = "https://github.com/Entropy1729/snarkVM.git"
branch = "testnet3"
features = ["aleo-cli", "circuit", "console", "parallel", "rest"]

[dependencies.consensus-workbench]
git = "https://github.com/Entropy1729/consensus-workbench.git"
branch = "main"

[dependencies.bytes]
version = "1.2.1"
