[package]
name = "aleo-abci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.0", default-features = false }
prost = { version = "0.11", default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
flex-error = { version = "0.4.4", default-features = false }
clap = { version = "4.0.5", features = ["derive"] }
tendermint = "0.25.0"
tendermint-proto = { version = "0.25.0", default-features = false }
futures = "*"
rocksdb = "0.19.0"
anyhow = "1.0.65"
log = "0.4.14"
tendermint-abci = "0.25.0"